refactor: update layout styles and enhance login component functionality

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -2,7 +2,7 @@
   <mat-card class="login-card">
     <mat-card-header>
       <mat-card-title>Time Logger</mat-card-title>
-      <mat-card-subtitle>Sign in to continue</mat-card-subtitle>
+      <mat-card-subtitle>Motivate yourself to get things done by rewarding your chore time with reward minutes!</mat-card-subtitle>
     </mat-card-header>
     <mat-card-content>
       <button mat-raised-button color="primary" (click)="login()">
