--- a/src/app/features/activities/activities.component.scss
+++ b/src/app/features/activities/activities.component.scss
@@ -150,7 +150,7 @@
   top: 0;
   right: -100%;
   width: 100vw;
-  height: 100vh;
+  height: 100dvh;
   background: white;
   box-shadow: -2px 0 8px rgba(0, 0, 0, 0.1);
   transition: right 0.3s ease-in-out;
